# Get-Vacancies-From-HH.RU

./: README.md  main.py  pyproject.toml
src/: Fileworker.py  JSONSaver.py  Parser.py  Vacancy.py  user_interaction.py  utils.py
tests/: test_Fileworker.py  test_Vacancy.py  test_utils.py
