[tool.poetry]
name = "get-vacancies-from-hh-ru"
version = "0.1.0"
description = ""
authors = ["Dmitriy <smank96@gmail.com>"]
readme = "README.md"
packages = [{include = "get_vacancies_from_hh"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
